--- a/src/app/modules/banking/components/banking-nav/banking-nav.component.html
+++ b/src/app/modules/banking/components/banking-nav/banking-nav.component.html
@@ -1,40 +1,66 @@
-<div class="side-nav">
-  <div class="logo">
-    <div class="logo__bg"><span>ABC</span></div>
-    Online Banking
-  </div>
-  <div class="menu-bar">
-    <ul>
-      <li>
-        <a href="#" routerLinkActive="active" routerLink="dashboard">
-          <app-svg-icon [svgIconId]="'dashboard'"></app-svg-icon>
-          Dashboard</a
-        >
-      </li>
-      <li>
-        <a href="#" routerLinkActive="active" routerLink="accounts">
-          <app-svg-icon [svgIconId]="'layers'"></app-svg-icon>
-          Accounts</a
-        >
-      </li>
-      <li>
-        <a href="#" routerLinkActive="active" routerLink="fundTransfer">
-          <app-svg-icon [svgIconId]="'shuffle'"></app-svg-icon>
-          Fund Transfer</a
-        >
-      </li>
-      <li>
-        <a href="#" routerLinkActive="active" routerLink="cards">
-          <app-svg-icon [svgIconId]="'credit-card'"></app-svg-icon>
-          Cards</a
-        >
-      </li>
-      <li>
-        <a href="#" routerLinkActive="active" routerLink="details">
-          <app-svg-icon [svgIconId]="'user'"></app-svg-icon>
-          Personal Details</a
-        >
-      </li>
-    </ul>
-  </div>
+<div class="side-nav" #sidenav>
+    <div class="logo">
+      <div class="logo-wrapper">
+        <span class="logo__bg">ABC</span>
+        <span>Online Banking</span>
+      </div>
+      <a (click)="toggleMenu(sidenav)" class="icon-close">
+        <app-svg-icon [svgIconId]="'cross'"></app-svg-icon>
+      </a>
+    </div>
+
+    <nav class="menu-bar">
+        <ul>
+            <li>
+                <a href="#" routerLink="dashboard" routerLinkActive="active" (click)="toggleMenu(sidenav)">
+                    <app-svg-icon [svgIconId]="'dashboard'"></app-svg-icon>
+                    Dashboard
+                </a
+                >
+            </li>
+            <li>
+                <a href="#" routerLink="accounts" routerLinkActive="active" (click)="toggleMenu(sidenav)">
+                    <app-svg-icon [svgIconId]="'layers'"></app-svg-icon>
+                    Accounts
+                </a
+                >
+            </li>
+            <li>
+                <a href="#" routerLink="fundTransfer" routerLinkActive="active" (click)="toggleMenu(sidenav)">
+                    <app-svg-icon [svgIconId]="'shuffle'"></app-svg-icon>
+                    Fund Transfer
+                </a
+                >
+            </li>
+            <li>
+                <a href="#" routerLink="cards" routerLinkActive="active" (click)="toggleMenu(sidenav)">
+                    <app-svg-icon [svgIconId]="'credit-card'"></app-svg-icon>
+                    Cards
+                </a
+                >
+            </li>
+            <li>
+                <a href="#" routerLink="details" routerLinkActive="active" (click)="toggleMenu(sidenav)">
+                    <app-svg-icon [svgIconId]="'user'"></app-svg-icon>
+                    Personal Details
+                </a
+                >
+            </li>
+        </ul>
+    </nav>
+</div>
+
+<!--Mobile Nav-->
+<div class="side-nav-mobile">
+    <div class="logo">
+        <div class="logo__bg">
+            <span>ABC</span>
+        </div>
+      Online Banking
+    </div>
+    <div>
+      <a (click)="toggleMenu(sidenav)">
+        <app-svg-icon [svgIconId]="'menu'"></app-svg-icon>
+      </a>
+    </div>
 </div>
