--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -51,3 +51,11 @@
 
 }
 
+@media (max-width : 768px) {
+  .main {
+    grid-template-rows: 1fr;
+    grid-template-columns: none;
+    gap: 12px;
+  }
+}
+
