Manage Payee; shared Module for all the shared components; Shared components: Alerts, SVG icons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="card">
-        <h3 class="card__heading">Online Banking Web Template</h3>
+        <h3 class="card__heading">Online Banking Template</h3>
         <p class="card__description">This is an online banking web application template built using
             HTML, CSS and Angular</p>
         <button (click)="showTemplate('BT')"
