--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import "styles/banking";
 @import "styles/banking-mobile";
 @import "styles/switch";
+@import "styles/modal";
 
 *, *::before, *::after {
   box-sizing : border-box;
